# zotero-tui

./: flake.nix  pyproject.toml
src/zotero_tui/: __init__.py  main.py
src/zotero_tui/database/: connection.py  models.py  queries.py
src/zotero_tui/ui/: app.py  events.py  styles.tcss
src/zotero_tui/ui/screens/: attachment_menu.py
src/zotero_tui/ui/widget/: item_table.py  search_bar.py  status_bar.py
src/zotero_tui/utils/: system.py
